# zabbix-mcp-server

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  development-plan.md  docker-compose.yml  index.html  pyproject.toml
config/: .env.example  mcp.json
scripts/: start_server.py  test_server.py
src/: zabbix_mcp_server.py
src/zabbix_mcp_server/: __init__.py  main_readonly.py  main_writable.py
src/zabbix_mcp_server/core/: __init__.py  client.py  config.py  tool_registry.py  utils.py
src/zabbix_mcp_server/tools/: __init__.py  action.py  configuration.py  dashboard.py  discovery.py  event.py  graph.py  history.py  host.py  hostgroup.py  item.py  itemprototype.py  macro.py  maintenance.py  map.py  mediatype.py  problem.py  proxy.py  system.py  template.py  trend.py  trigger.py  user.py  usermedia.py  valuemap.py
